# stock-agent

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  agent.py  automation.py  chart_portfolio.py  com.stockagent.dailytrading.plist  config.py  evaluate.py  memory_database.py  memory_schema.sql  outlook_auth.py  outlook_client.py  portfolio.py  portfolio_database.py  portfolio_schema.sql  portfolio_sprocs.sql  prompts.py  pyproject.toml  run_daily_trading.sh  setup_launchd.sh  stock_fetcher_yahoo.py  stock_history_database.py  stock_history_schema.sql  stock_history_sync.py  test_apply_trades.py  test_email.py  test_load_save_portfolio.py
tests/: test_apply_trades.py  test_email.py  test_load_save_portfolio.py
