[project]
name = "stock-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-openai>=0.3.32",
    "langchain-tavily>=0.2.11",
    "langgraph>=0.6.7",
    "markdown>=3.9",
    "matplotlib>=3.10.7",
    "msal>=1.31.0",
    "pandas>=2.3.2",
    "psycopg2-binary>=2.9.11",
    "requests>=2.32.0",
    "tqdm>=4.67.1",
    "yfinance>=0.2.65",
]
