[project]
name = "stock-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.2.0",
    "langchain-core>=1.2.3",
    "langchain-google-genai>=4.1.1",
    "langchain-openai>=1.1.6",
    "langchain-tavily>=0.2.11",
    "langgraph>=1.0.5",
    "markdown>=3.9",
    "matplotlib>=3.10.7",
    "msal>=1.31.0",
    "pandas>=2.3.2",
    "psycopg2-binary>=2.9.11",
    "requests>=2.32.0",
    "ruff>=0.12.0",
    "tqdm>=4.67.1",
    "yfinance>=0.2.65",
]

[tool.ruff]
line-length = 160

[tool.ruff.format]
# project directories that do not adhere to black standard yet.
exclude = [
]

[tool.pyright]
pythonVersion = "3.12"
pythonPlatform = "Linux"
